Update role for Codebuild